<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="sdkConfig"
            type="com.firstdata.sdk.sample.utility.SDKTestProfileConfig" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="textWatcher"
            type="android.databinding.adapters.TextViewBindingAdapter.OnTextChanged" />


    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/api_key_container"
                style="@style/form_edit_text_container_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toTopOf="@+id/api_sec_key_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/apiKeyView"
                    style="@style/form_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_api_key"
                    android:onTextChanged="@{textWatcher::onTextChanged}"
                    android:text="@={sdkConfig.apiKey}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/api_sec_key_container"
                style="@style/form_edit_text_container_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/env_selection_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/api_key_container">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/apiSecretKeyView"
                    style="@style/form_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_api_sec_key"
                    android:onTextChanged="@{textWatcher::onTextChanged}"
                    android:text="@={sdkConfig.secretKey}" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/env_selection_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/api_url_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/api_sec_key_container">

                <TextView
                    android:id="@+id/env_title_txt"
                    style="@style/form_text_title_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_env" />

                <RadioGroup
                    style="@style/form_edit_text_container_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RadioButton
                        android:id="@+id/envOptionQARadio"
                        style="@style/form_edit_text_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="QA" />

                    <RadioButton
                        android:id="@+id/envOptionCATRadio"
                        style="@style/form_edit_text_style"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="CAT" />
                </RadioGroup>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/api_url_container"
                style="@style/form_edit_text_container_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/fd_acc_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/env_selection_container">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/apiEndPointView"
                    style="@style/form_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_url"
                    android:text="@{envOptionQARadio.checked ? sdkConfig.qaEndPoint : sdkConfig.catEndPoint}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fd_acc_container"
                style="@style/form_edit_text_container_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/note_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/api_url_container">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fdAccountIDView"
                    style="@style/form_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_FD_ACC_ID"
                    android:onTextChanged="@{textWatcher::onTextChanged}"
                    android:text="@={sdkConfig.fdAccountID}" />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:id="@+id/note_container"
                style="@style/form_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/str_note"
                android:justificationMode="inter_word"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/fd_customer_id_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fd_acc_container" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fd_customer_id_container"
                style="@style/form_edit_text_container_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:layout_constraintBottom_toTopOf="@+id/action_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_container">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fdCustomerIDView"
                    style="@style/form_edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_FD_customer_ID"
                    android:onTextChanged="@{textWatcher::onTextChanged}"
                    android:text="@={sdkConfig.fdCustomerID}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/action_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toTopOf="@+id/api_url_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fd_customer_id_container">

                <Button
                    android:id="@+id/btnClearKeys"
                    style="@style/form_btn_style"
                    android:enabled="@{apiKeyView.text.length() > 0 &amp;&amp; apiSecretKeyView.text.length() > 0}"
                    android:onClick="@{(v) -> clickListener.onClick(v)}"
                    android:text="@string/str_clear_keys"
                    app:layout_constraintEnd_toStartOf="@+id/btnClearProfile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnClearProfile"
                    style="@style/form_btn_style"
                    android:enabled="@{fdCustomerIDView.text.length() > 0}"
                    android:onClick="@{(v) -> clickListener.onClick(v)}"
                    android:text="@string/str_clear_profile"
                    app:layout_constraintEnd_toStartOf="@+id/btnGenToken"
                    app:layout_constraintStart_toEndOf="@+id/btnClearKeys"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnGenToken"
                    style="@style/form_btn_style"
                    android:text="@string/str_generate_token"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnClearProfile"
                    android:enabled="@{apiKeyView.text.length() > 0 &amp;&amp; apiSecretKeyView.text.length() > 0 &amp;&amp; fdCustomerIDView.text.length() > 0 }"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="@{(v) -> clickListener.onClick(v)}"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>