<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/app_list_item_selector">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/acc_no_container"
        style="@style/form_edit_text_container_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/routing_no_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/accNumber"
            style="@style/form_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_field_acc_no"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/routing_no_container"
        style="@style/form_edit_text_container_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/transaction_id_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acc_no_container">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/routingNo"
            style="@style/form_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_field_routing_no"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/transaction_id_container"
        style="@style/form_edit_text_container_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routing_no_container">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/transactionID"
            style="@style/form_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_field_transaction_id"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        style="@style/form_edit_text_container_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="40dp"
        android:paddingBottom="30dp"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_id_container">

        <TextView
            android:id="@+id/phone_no_type_label"
            style="@style/form_spinner_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="6"
            android:text="@string/str_field_acc_type" />

        <Spinner
            android:id="@+id/phone_no_type_selection_spinner"
            style="@style/form_spinner_style"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:entries="@array/array_acc_types"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/acc_type_label"
            app:layout_constraintTop_toBottomOf="@+id/acc_no_container" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>